--- a/Tedometer/Resources/FlipsideView.xib
+++ b/Tedometer/Resources/FlipsideView.xib
@@ -12,9 +12,9 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="96"/>
 			<integer value="43"/>
 			<integer value="127"/>
-			<integer value="81"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -49,7 +49,7 @@
 						<reference key="NSSuperview" ref="269955861"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
-						<float key="IBUIAlpha">0.95070421695709229</float>
+						<float key="IBUIAlpha">0.69999998807907104</float>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
@@ -59,7 +59,7 @@
 					<object class="IBUIImageView" id="709277355">
 						<reference key="NSNextResponder" ref="269955861"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{17, 10}, {17, 30}}</string>
+						<string key="NSFrame">{{13, 12.5}, {25, 25}}</string>
 						<reference key="NSSuperview" ref="269955861"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIAutoresizesSubviews">NO</bool>
@@ -77,7 +77,7 @@
 					<object class="IBUILabel" id="407372027">
 						<reference key="NSNextResponder" ref="269955861"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{44, 6}, {261, 38}}</string>
+						<string key="NSFrame">{{44, 6}, {236, 38}}</string>
 						<reference key="NSSuperview" ref="269955861"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="594679999">
 							<int key="NSColorSpace">3</int>
@@ -97,8 +97,13 @@
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
+						<object class="NSColor" key="IBUIShadowColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDEgMAA</bytes>
+						</object>
+						<string key="IBUIShadowOffset">{0, 0}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">10</float>
+						<float key="IBUIMinimumFontSize">9</float>
 						<int key="IBUINumberOfLines">2</int>
 					</object>
 					<object class="IBUIButton" id="814190803">
@@ -403,6 +408,33 @@ IEluYy4sIDIwMTAAA</bytes>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUINumberOfLines">2</int>
 					</object>
+					<object class="IBUILabel" id="114301599">
+						<reference key="NSNextResponder" ref="206834574"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{20, 406}, {172, 56}}</string>
+						<reference key="NSSuperview" ref="206834574"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAgMAA</bytes>
+						</object>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string type="base64-UTF8" key="IBUIText">QXBwbHkgY29ycmVjdGlvbiBmb3IgbG93L3BlYWsgbmV0IHZhbHVlczoNA</string>
+						<reference key="IBUIFont" ref="319346214"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDEgMC44NQA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<object class="NSColor" key="IBUIShadowColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC4yMDM3OTE2Njg1IDAuMjIzMzMzMzMzMyAwLjIwMzc5MTY2ODUAA</bytes>
+						</object>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUINumberOfLines">2</int>
+					</object>
 					<object class="IBUILabel" id="501322336">
 						<reference key="NSNextResponder" ref="206834574"/>
 						<int key="NSvFlags">292</int>
@@ -481,13 +513,13 @@ IEluYy4sIDIwMTAAA</bytes>
 					<object class="IBUILabel" id="163842264">
 						<reference key="NSNextResponder" ref="206834574"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{77, 441}, {169, 48}}</string>
+						<string key="NSFrame">{{76, 512}, {168, 48}}</string>
 						<reference key="NSSuperview" ref="206834574"/>
 						<reference key="IBUIBackgroundColor" ref="1064442111"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="IBUIText">Use touch gestures to adjust meter range.</string>
+						<string key="IBUIText">Tap and hold meter to adjust range.</string>
 						<reference key="IBUIFont" ref="319346214"/>
 						<reference key="IBUITextColor" ref="1025942634"/>
 						<nil key="IBUIHighlightedColor"/>
@@ -498,10 +530,42 @@ IEluYy4sIDIwMTAAA</bytes>
 						<int key="IBUITextAlignment">1</int>
 						<int key="IBUILineBreakMode">0</int>
 					</object>
+					<object class="IBUILabel" id="798545380">
+						<reference key="NSNextResponder" ref="206834574"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{20, 452}, {280, 52}}</string>
+						<reference key="NSSuperview" ref="206834574"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAgMAA</bytes>
+						</object>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="IBUIText">Corrects for bugs in LiveData.xml that occur when using multiple MTUs. (Experimental.) </string>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">11</double>
+							<int key="NSfFlags">16</int>
+						</object>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDEgMC44NQA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<object class="NSColor" key="IBUIShadowColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC4yMDM3OTE2Njg1IDAuMjIzMzMzMzMzMyAwLjIwMzc5MTY2ODUAA</bytes>
+						</object>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUINumberOfLines">3</int>
+						<int key="IBUILineBreakMode">0</int>
+					</object>
 					<object class="IBUILabel" id="256590107">
 						<reference key="NSNextResponder" ref="206834574"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 527}, {280, 61}}</string>
+						<string key="NSFrame">{{19, 582}, {280, 61}}</string>
 						<reference key="NSSuperview" ref="206834574"/>
 						<reference key="IBUIBackgroundColor" ref="594679999"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -635,8 +699,19 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 						</object>
 						<int key="IBUIClearButtonMode">1</int>
 					</object>
+					<object class="IBUISwitch" id="476860244">
+						<reference key="NSNextResponder" ref="206834574"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{206, 421}, {94, 27}}</string>
+						<reference key="NSSuperview" ref="206834574"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+					</object>
 				</object>
-				<string key="NSFrameSize">{320, 605}</string>
+				<string key="NSFrameSize">{320, 663}</string>
 				<reference key="NSSuperview"/>
 				<reference key="IBUIBackgroundColor" ref="1073554546"/>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -863,6 +938,14 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 					</object>
 					<int key="connectionID">137</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">patchAggregationData</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="476860244"/>
+					</object>
+					<int key="connectionID">142</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -907,13 +990,16 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 							<reference ref="851476541"/>
 							<reference ref="109925106"/>
 							<reference ref="1024656410"/>
-							<reference ref="256590107"/>
-							<reference ref="373614312"/>
 							<reference ref="1046466730"/>
 							<reference ref="288561653"/>
 							<reference ref="213562995"/>
 							<reference ref="143945707"/>
 							<reference ref="501322336"/>
+							<reference ref="476860244"/>
+							<reference ref="256590107"/>
+							<reference ref="373614312"/>
+							<reference ref="114301599"/>
+							<reference ref="798545380"/>
 							<reference ref="163842264"/>
 						</object>
 						<reference key="parent" ref="0"/>
@@ -1069,6 +1155,21 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 						<reference key="object" ref="544460637"/>
 						<reference key="parent" ref="553200710"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">138</int>
+						<reference key="object" ref="114301599"/>
+						<reference key="parent" ref="206834574"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">139</int>
+						<reference key="object" ref="476860244"/>
+						<reference key="parent" ref="206834574"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">140</int>
+						<reference key="object" ref="798545380"/>
+						<reference key="parent" ref="206834574"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1090,6 +1191,9 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 					<string>130.IBPluginDependency</string>
 					<string>135.IBPluginDependency</string>
 					<string>136.IBPluginDependency</string>
+					<string>138.IBPluginDependency</string>
+					<string>139.IBPluginDependency</string>
+					<string>140.IBPluginDependency</string>
 					<string>40.CustomClassName</string>
 					<string>40.IBEditorWindowLastContentRect</string>
 					<string>40.IBPluginDependency</string>
@@ -1121,7 +1225,10 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>{{742, 542}, {320, 50}}</string>
+					<string>{{758, 325}, {320, 50}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1144,7 +1251,7 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>SettingsView</string>
-					<string>{{397, 741}, {320, 605}}</string>
+					<string>{{1039, 150}, {320, 663}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>{{1303, 792}, {480, 320}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1166,7 +1273,7 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">137</int>
+			<int key="maxID">142</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1189,11 +1296,13 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 							<string>backgroundClick:</string>
 							<string>clearConnectionErrorMsg:</string>
 							<string>done</string>
+							<string>showConnectionErrorMsg:</string>
 							<string>textFieldDoneEditing:</string>
 							<string>updateRefreshRateLabel:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1210,6 +1319,7 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 							<string>disableAutolockWhilePluggedIn</string>
 							<string>gatewayAddress</string>
 							<string>password</string>
+							<string>patchAggregationData</string>
 							<string>refreshRateLabel</string>
 							<string>refreshRateSlider</string>
 							<string>scrollView</string>
@@ -1225,6 +1335,7 @@ Oi8vdGhlZW5lcmd5ZGV0ZWN0aXZlLmNvbSAKZm9yIGluZm9ybWF0aW9uLiAKA</string>
 							<string>UISwitch</string>
 							<string>UITextField</string>
 							<string>UITextField</string>
+							<string>UISwitch</string>
 							<string>UILabel</string>
 							<string>UISlider</string>
 							<string>UIScrollView</string>
