--- a/Tedometer/Resources/MeterView.xib
+++ b/Tedometer/Resources/MeterView.xib
@@ -41,27 +41,27 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="top" id="34" userLabel="Meter View" customClass="MeterView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="492"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="center" id="34" userLabel="Meter View" customClass="MeterView">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" id="kxM-Vn-3Tn" userLabel="Meter Group">
-                    <rect key="frame" x="-20" y="64" width="360" height="393"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view contentMode="center" id="kxM-Vn-3Tn" userLabel="Meter Group">
+                    <rect key="frame" x="-20" y="48" width="360" height="473"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <view contentMode="scaleAspectFit" id="vHf-ez-xWQ" userLabel="Dial Group">
-                            <rect key="frame" x="0.0" y="0.0" width="360" height="297"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        <view contentMode="center" id="vHf-ez-xWQ" userLabel="Dial Group">
+                            <rect key="frame" x="0.0" y="0.0" width="360" height="377"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                             <subviews>
-                                <imageView opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="meter_bg_metal_halo.png" id="216">
-                                    <rect key="frame" x="56" y="27" width="246" height="247"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </imageView>
                                 <view clearsContextBeforeDrawing="NO" contentMode="center" id="61" userLabel="Dial View">
                                     <rect key="frame" x="20" y="20" width="320" height="257"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                     <subviews>
+                                        <imageView opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="meter_bg_metal_halo.png" id="216">
+                                            <rect key="frame" x="37" y="5" width="246" height="247"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </imageView>
                                         <imageView opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="meter_bg_metal_shadow_thin.png" id="217">
                                             <rect key="frame" x="37" y="7.5" width="245" height="245"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
@@ -102,8 +102,8 @@
                                             <color key="shadowColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="0.34000000000000002" colorSpace="calibratedRGB"/>
                                             <size key="shadowOffset" width="0.0" height="1"/>
                                         </label>
-                                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="124" userLabel="Dial and Ticks View" customClass="DialView">
-                                            <rect key="frame" x="0.0" y="8" width="320" height="251"/>
+                                        <view clearsContextBeforeDrawing="NO" contentMode="center" id="124" userLabel="Dial and Ticks View" customClass="DialView">
+                                            <rect key="frame" x="0.0" y="4" width="320" height="251"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <imageView opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" alpha="0.38732394576072693" contentMode="scaleAspectFit" image="meter_glare.png" id="63">
@@ -175,8 +175,8 @@ PF:
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
-                        <view contentMode="scaleToFill" id="TxZ-WV-LO8" userLabel="Values Group">
-                            <rect key="frame" x="20" y="260" width="335" height="144"/>
+                        <view contentMode="center" id="TxZ-WV-LO8" userLabel="Values Group">
+                            <rect key="frame" x="20" y="260" width="335" height="230.5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Average" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="151" userLabel="AvgLabel">
