--- a/Tedometer/Source/MainView.xib
+++ b/Tedometer/Source/MainView.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController">
             <connections>
-                <outlet property="pageControl" destination="13" id="15"/>
+                <outlet property="pageControl" destination="xJE-MS-nk9" id="XX0-Pk-LWy"/>
                 <outlet property="scrollView" destination="12" id="14"/>
                 <outlet property="toolbar" destination="4" id="16"/>
                 <outlet property="view" destination="1" id="3"/>
@@ -22,6 +22,13 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </scrollView>
+                <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="xJE-MS-nk9">
+                    <rect key="frame" x="0.0" y="401" width="320" height="37"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <connections>
+                        <action selector="changePage:" destination="-1" eventType="valueChanged" id="RqA-Y0-ucB"/>
+                    </connections>
+                </pageControl>
                 <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="4">
                     <rect key="frame" x="0.0" y="436" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -55,16 +62,9 @@
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="10"/>
                     </items>
                 </toolbar>
-                <pageControl opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="top" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="5" id="13">
-                    <rect key="frame" x="31" y="385" width="263" height="36"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <connections>
-                        <action selector="changePage:" destination="-1" eventType="touchUpInside" id="21"/>
-                    </connections>
-                </pageControl>
             </subviews>
             <color key="tintColor" red="0.28561111589999999" green="0.32333333330000003" blue="0.28561111589999999" alpha="1" colorSpace="deviceRGB"/>
+            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
