--- a/Tedometer/Resources/MeterView.xib
+++ b/Tedometer/Resources/MeterView.xib
@@ -155,7 +155,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="11"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <button hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="209" userLabel="StopEditButton">
                                     <rect key="frame" x="287" y="40" width="39" height="39"/>
@@ -186,7 +186,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.63638380500000002" green="0.82333333330000003" blue="0.2058333333" alpha="1" colorSpace="deviceRGB"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Low" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="152" userLabel="LowLabel">
                                     <rect key="frame" x="20" y="20" width="127" height="21"/>
@@ -195,7 +195,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.50196081400000003" green="0.65098041299999998" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
                                     <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Peak" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="153" userLabel="PeakLabel">
                                     <rect key="frame" x="20" y="60" width="127" height="21"/>
@@ -204,7 +204,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.97254908080000002" green="0.61568629740000003" blue="0.23529413339999999" alpha="1" colorSpace="deviceRGB"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Total" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="104" userLabel="TotalLabel">
                                     <rect key="frame" x="20" y="81" width="161" height="21"/>
@@ -213,7 +213,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="..." textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="106" userLabel="LowValue">
                                     <rect key="frame" x="148" y="20" width="122" height="21"/>
@@ -222,7 +222,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.50196081400000003" green="0.65098041299999998" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
                                     <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="kW" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="197" userLabel="LowValueUnit">
                                     <rect key="frame" x="271" y="20" width="44" height="21"/>
@@ -231,7 +231,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.50196081400000003" green="0.65098041299999998" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
                                     <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="..." textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="107" userLabel="TotalValue">
                                     <rect key="frame" x="148" y="81" width="122" height="21"/>
@@ -240,7 +240,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="kWh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="200" userLabel="TotalValueUnit">
                                     <rect key="frame" x="271" y="81" width="44" height="21"/>
@@ -249,7 +249,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="..." textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="157" userLabel="PeakValue">
                                     <rect key="frame" x="148" y="60" width="122" height="21"/>
@@ -258,7 +258,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.97254908080000002" green="0.61568629740000003" blue="0.23529413339999999" alpha="1" colorSpace="deviceRGB"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="kW" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="199" userLabel="PeakValueUnit">
                                     <rect key="frame" x="271" y="60" width="44" height="21"/>
@@ -267,7 +267,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.97254908080000002" green="0.61568629740000003" blue="0.23529413339999999" alpha="1" colorSpace="deviceRGB"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="..." textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="158" userLabel="AvgValue">
                                     <rect key="frame" x="148" y="40" width="122" height="21"/>
@@ -276,7 +276,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.63638380500000002" green="0.82333333330000003" blue="0.2058333333" alpha="1" colorSpace="deviceRGB"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="kW" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="198" userLabel="AvgValueUnit">
                                     <rect key="frame" x="271" y="40" width="44" height="21"/>
@@ -285,7 +285,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="0.63638380500000002" green="0.82333333330000003" blue="0.2058333333" alpha="1" colorSpace="deviceRGB"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Est. Month Total" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="174" userLabel="ProjLabel">
                                     <rect key="frame" x="20" y="103" width="161" height="21"/>
@@ -294,7 +294,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="..." textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="175" userLabel="ProjValue">
                                     <rect key="frame" x="148" y="103" width="122" height="21"/>
@@ -303,7 +303,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="kWh" lineBreakMode="tailTruncation" minimumFontSize="10" id="201" userLabel="ProjValueUnit">
                                     <rect key="frame" x="271" y="103" width="44" height="21"/>
@@ -312,7 +312,7 @@ PF:
                                     <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="shadowColor" red="0.2037916685" green="0.22333333329999999" blue="0.2037916685" alpha="1" colorSpace="deviceRGB"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                 </label>
                                 <button opaque="NO" clearsContextBeforeDrawing="NO" tag="1000" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="207" userLabel="Today/Month Toggle Button over values">
                                     <rect key="frame" x="20" y="20" width="290" height="104"/>
