--- a/Tedometer/Resources/MeterView.xib
+++ b/Tedometer/Resources/MeterView.xib
@@ -41,7 +41,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="34" userLabel="Meter View" customClass="MeterView">
+        <view contentMode="scaleToFill" id="34" userLabel="Meter View" customClass="MeterView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
